# MTG

./: .gitignore  CMakeLists.txt  remon.tar
EmbeddedProject-main/EmbeddedProject-main/: README.md  platformio.ini
MTG/: MTG.sln
MTG UIM/: MTG UIM.sln
MTG UIM/MTG UIM/: MTG UIM.ino  MTG UIM.vcxproj  MTG UIM.vcxproj.filters
MTG/MTG/: MTG.ino  MTG.vcxproj  MTG.vcxproj.filters
MTG/MTG Main/: ClassDiagram.cd  MTG.vcxproj  MTG.vcxproj.filters
MTG/MTG UIM/: MTG UIM.vcxproj
MTG_Main/: CMakeLists.txt  baskup.hex  platformio.ini
MTG_Main/src/: GameBase.hpp  GameBoard.cpp  LudoGame.cpp  LudoGame.hpp  LudoUserInput.cpp  Memory.cpp  MoterController.hpp  MotionController.cpp  MotionController.hpp  MotorController.cpp  Path.hpp  PathFinding.cpp  PathFinding.hpp  Pawns.hpp  Player.hpp  UIMCommand.h  UserInputModule.cpp  config.h  ludoGame.hpp  main.cpp  motorDriver.cpp  motorDriver.hpp  pawn.cpp  typedefs.h
MTG_Main/test/: CMakeLists.txt
MTG_Main/test/pathFinding/: CMakeLists.txt  main.cpp  result.json
MTG_UIM/src/: ButtonManager.cpp  ButtonManager.hpp  DiceService.hpp  UIMButton.h  UIMCommand.h  UimSlave.cpp  UimSlave.hpp
User_Input_Module/User_Input_Module/: ButtonManager.cpp  DiceService.hpp  UIMButton.h  UIMCommand.h  UIMDiceLed.h  UimSlave.cpp  UimSlave.hpp
User_Input_Module/__MACOSX/: ._User_Input_Module
documentation/: activitydiagram.plantuml  classDiagram.plantuml  componentdiagram.plantuml
pathfindingvisualisation/: package-lock.json  package.json  webpack.rules.js
pathfindingvisualisation/src/: app.jsx  index.html  index.js  tailwind.css
(+30 files in other folders)
